@@ -169,6 +169,10 @@ jobs:
           vscode_arch: riscv64
           npm_arch: riscv64
           image: vscodium/vscodium-linux-build-agent:focal-riscv64
+        - slug: LOONG64
+          vscode_arch: loong64
+          npm_arch: loong64
+          image: vscodium/vscodium-linux-build-agent:trixie-loong64
     container:
       image: ${{ matrix.image }}
     env:
